    stop rather than passing a second arg to log_daemon_msg, for greater
    compatibility with both Debian and Ubuntu LSB initscript implementations.
    Closes: #453350.
  * Drop smbldap-tools to Suggests:, consistent with the textbook meaning of
    recommends/suggests which is now implemented correctly in apt.
    Closes: #453144.

 -- Steve Langasek <vorlon@debian.org>  Thu, 29 Nov 2007 14:11:43 -0800

samba (3.0.27a-1) unstable; urgency=low

  [ Steve Langasek ]
  * New upstream release
    - fix regression with smbfs clients, introduced by the security fix in
      3.0.27.  Closes: #451839.
    - debian/patches/cifs-umount-trailing-slashes.patch: merged upstream.
  * Drop the deprecated "printer admin" example from the default smb.conf.
    Closes: #451273.
  * Add a *new* debian/patches/cups.patch to *enable* cups as the default
    printing system, because since the original introduction of this patch
    in Debian there was a regression upstream that caused cups to never be
    selected as the default print system.
  * Set the default value for the workgroup question to "WORKGROUP" in
    samba-common.templates, not just in the template smb.conf, so that the
    debconf question comes out right every time; and always treat this
    as a high-priority debconf question instead of selecting the
    priority based on whether there's an existing value, since there's
    now *always* an existing value but the value doesn't tell us
    anything meaningful about the user's preference.  Closes: #451271.
  * Drop some code from samba.postinst that only applies to upgrades from
    pre-3.0 (i.e., pre-sarge) packages

  [ Christian Perrier ]
  * Update the "built by" part of README.debian
  * Remove the very outdated parts of README.debian

 -- Steve Langasek <vorlon@debian.org>  Fri, 23 Nov 2007 13:04:52 -0800

samba (3.0.27-1) unstable; urgency=low

  * New upstream version
    - fixes a remote code execution vulnerability when running nmbd as a