@@ -110,9 +110,6 @@ clean-patched:
 	source/client/mount.cifs source/client/umount.cifs \
 	source/include/stamp-h
 
-	sed -e "s/@libacl@/`type-handling any linux-gnu`/g" \
-		< debian/control.in > debian/control
-
 	debconf-updatepo
 
 	dh_clean
@@ -235,4 +232,9 @@ endif
 	dh_builddeb
 
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure patch unpatch
+
+update-archs:
+	sed -i -e "s/libacl1-dev \(([^)]\+)\) \[[^]]\+\]/libacl1-dev \1 [`type-handling any linux-gnu`]/g" \
+		debian/control
+
+.PHONY: build clean binary-indep binary-arch binary install configure patch unpatch update-archs
